# distributed_MNIST

./: .gitignore  CMakeLists.txt  README.md  dist_mnist.cpp  main.cpp  make.sh  run_dist.sh  run_serial.sh  serial_mnist.cpp
